loops on tests, data config moves to data.csv